ubuntu-release-upgrader (1:22.04.7) UNRELEASED; urgency=medium

  [ Brian Murray ]
  * Inclusive naming updates.

  [ Nick Rosbrook ]
  * Replace core18 with core20 in DistUpgrade/deb2snap.json.

 -- Brian Murray <brian@ubuntu.com>  Mon, 14 Mar 2022 10:47:02 -0700

ubuntu-release-upgrader (1:22.04.6) jammy; urgency=medium

  * Prevent upgrades to jammy on POWER8 (LP: #19602550).

 -- Nick Rosbrook <nick.rosbrook@canonical.com>  Wed, 23 Feb 2022 12:37:39 -0800

ubuntu-release-upgrader (1:22.04.5) jammy; urgency=medium

  [ Brian Murray ]
  * debian/control: rename the main branch
  * Increase the fallback KERNEL_INITRD_SIZE so that there is room for
    commonly used modules in the initramfs subsequently some upgrades may be
    disallowed due to a lack of free space in /boot.
  * Run pre-build.sh: updating mirrors, demotions, and translations.

  [ Nick Rosbrook ]
  * Update download rates in estimated download message (LP: #1947581)
  * Use org.freedesktop.ScreenSaver to inhibit screen lock (LP: #1959458).
    This approach also works in Kubuntu.

 -- Brian Murray <brian@ubuntu.com>  Mon, 14 Feb 2022 11:01:58 -0800

ubuntu-release-upgrader (1:22.04.4) jammy; urgency=medium

  [ Steve Langasek ]
  * DistUpgrade/DistUpgradeController.py: remove references to
    archive.canonical.com from sources.list on upgrade.  LP: #1959343.

  [ Brian Murray ]
  * tests/test_sources_list.py: update the tests which expected / utilized the
    archive.canonical.com partner repository.

 -- Brian Murray <brian@ubuntu.com>  Fri, 28 Jan 2022 11:39:24 -0800

ubuntu-release-upgrader (1:22.04.3) jammy; urgency=medium

  * DistUpgrade/DistUpgradeController.py: switch from using os.readlink to
    os.path.realpath when checking for the default python version. Thanks to
    Nico Schlömer. (LP: #1953135)
  * data/release-upgrades: set Prompt to lts as jammy is an LTS release.
    (LP: #1955843)

 -- Brian Murray <brian@ubuntu.com>  Wed, 05 Jan 2022 14:27:07 -0800
