@@ -5,6 +5,8 @@ ubuntu-release-upgrader (1:22.04.7) UNRELEASED; urgency=medium
 
   [ Nick Rosbrook ]
   * Replace core18 with core20 in DistUpgrade/deb2snap.json.
+  * Add firefox deb2snap entries for appropriate flavors. This includes
+    Kubuntu, where an issue was already reported (LP: #1964443).
 
  -- Brian Murray <brian@ubuntu.com>  Mon, 14 Mar 2022 10:47:02 -0700
 
